# proppie

./: README.md  cabal.project  compiler.nix  default.nix  hie.yaml  newtypeproblems.cabal  package.yaml  proppie.cabal  snapshot.nix
app/: Main.hs
lib/: Composition.hs  ExtraClasses.hs  Pipes.hs  SYTC.hs
nix/: sources.json
src/: ExtraClasses.hs  FunList.hs  Newtypes.hs  Optics.hs  Pipes.hs  SYTC.hs  Test.hs  Types.hs
