cabal-version:       >=1.10
name:                newtypeproblems
version:             0.1.0.0
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
build-type:          Simple

library
  build-depends:       base >=4.12 && <4.13, profunctors
  exposed-modules:     Types ExtraClasses SYTC Newtypes
  default-extensions:  RankNTypes, QuantifiedConstraints, ImpredicativeTypes
  hs-source-dirs:      src
  default-language:    Haskell2010
