cabal-version:       >=1.10
name:                newtypeproblems
version:             0.1.0.0
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
build-type:          Simple

library
  ghc-options:         -Wincomplete-patterns
  build-depends:       base >=4.12 && <4.13, profunctors, either, semigroupoids
  exposed-modules:     ExtraClasses SYTC Newtypes Optics Test
  default-extensions:  RankNTypes, QuantifiedConstraints, ImpredicativeTypes, TypeApplications, TupleSections, LambdaCase, DerivingVia, StandaloneDeriving
  hs-source-dirs:      src
  default-language:    Haskell2010
